--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -31,7 +31,7 @@
   align-items: center;
   display: flex;
   gap: 20px;
-  background-color: #fff;
+  background-color: var(--color-neutral-0);
   padding: 12px;
   box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
 }
@@ -49,7 +49,7 @@
 }
 
 .feedback-content p span {
-  color: #e9a209;
+  color: var(--color-primary-6);
 }
 
 @media screen and (max-width: 1170px) {
